# sostrades-core

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pydeps  .readthedocs.yaml  AutoCompleteHeaders  CREDITS.rst  HeadersIgnoreConfig.py  LICENSE  MANIFEST.in  NOTICE  Pipfile  README.md  default_process_rights.yaml  dev.requirements.txt  git_script.py  headers_ignore_config.json  nose2.cfg  parameters_glossary.csv  pyproject.toml  pytest.ini  requirements-with-gemseo-petsc-plugin.in  requirements.in  requirements.txt  ruff.toml  setup.py  strategy.py
.github/: dependabot.yaml
.gitlab/issue_templates/: user_story_template.md
LICENSES/: BSD-2-Clause.txt  BSD-3-Clause.txt  EPL-v2.0.txt  MIT.txt
LICENSES/headers/: Apachev2.0.txt
docs/sample/: use-sphinx-rtd.md
docs/source/: conf.py  create-postprocessing.md  create-process-disc.md  create-usecase.md  index.rst
sos_trades_core/: api.py
sos_trades_core/execution_engine/: archi_builder.py  build_sos_discipline_scatter.py  build_sos_very_simple_multi_scenario.py  data_manager.py  execution_engine.py  gather_data.py  namespace.py  ns_manager.py  post_processing_manager.py  scatter_data.py  scatter_map.py  sos_builder.py  sos_coupling.py  sos_discipline.py  sos_discipline_builder.py  sos_discipline_gather.py  sos_discipline_scatter.py  sos_doe_scenario.py  sos_eval.py  sos_factory.py  sos_gradients.py  sos_jacobian_assembly.py  sos_morph_matrix_eval.py  sos_multi_scatter_builder.py  sos_multi_scenario.py  sos_newton_root_solver.py  sos_optim_scenario.py  (+4 more)
sostrades_core/: __init__.py  api.py  auto_complete_headers.py
(+1892 files in other folders)
